--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
   "name": "x2-react-native",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "private": true,
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "test": "jest --watchAll --verbose --coverage --runInBand --detectOpenHandles",
+    "watch": "expo start"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-community/datetimepicker": "6.2.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/slider": "4.2.3",
+    "@react-native-picker/picker": "2.4.2",
+    "@reduxjs/toolkit": "^1.8.5",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
+    "expo-auth-session": "^3.7.1",
+    "expo-random": "~12.3.0",
+    "get-best-contrast-color": "^0.3.1",
+    "graphql": "^16.6.0",
+    "graphql-request": "^4.3.0",
+    "jwt-decode": "^3.1.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
@@ -18,9 +29,41 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@react-native-community/eslint-config": "^3.1.0",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "@types/react-router-native": "^5.1.3",
+    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.7.1",
     "typescript": "~4.3.5"
   },
-  "private": true
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "parserOptions": {
+      "ecmaVersion": 2020
+    },
+    "rules": {
+      "react/jsx-uses-react": "off",
+      "react/react-in-jsx-scope": "off"
+    },
+    "extends": [
+      "@react-native-community",
+      "plugin:prettier/recommended"
+    ]
+  },
+  "prettier": {
+    "semi": false,
+    "arrowParens": "always",
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "endOfLine": "auto"
+  }
 }
