--- a/package.json
+++ b/package.json
@@ -25,8 +25,14 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-elements": "^3.4.2",
+    "react-native-highlight-words": "^1.0.1",
+    "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.1",
+    "react-router-native": "^6.4.1",
     "redux": "^4.2.0"
   },
   "devDependencies": {
