--- a/package.json
+++ b/package.json
@@ -10,45 +10,21 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
-    "@react-native-community/datetimepicker": "6.2.0",
-    "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/slider": "4.2.3",
-    "@react-native-picker/picker": "2.4.2",
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/native-stack": "^6.9.0",
     "@reduxjs/toolkit": "^1.8.5",
     "expo": "~46.0.14",
-    "expo-auth-session": "^3.7.1",
-    "expo-random": "~12.3.0",
-    "get-best-contrast-color": "^0.3.1",
     "graphql": "^16.6.0",
-    "graphql-request": "^4.3.0",
-    "jwt-decode": "^3.1.2",
+    "graphql-request": "^5.0.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-echarts-wrapper": "^2.0.0",
-    "react-native-elements": "^3.4.2",
-    "react-native-highlight-words": "^1.0.1",
-    "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-material-bottom-navigation": "^1.0.5",
-    "react-native-modal": "^13.0.1",
-    "react-native-modal-datetime-picker": "^13.1.2",
-    "react-native-picker-select": "^8.0.4",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "react-native-svg": "12.3.0",
-    "react-native-swipe-gestures": "^1.0.5",
-    "react-native-web": "~0.18.7",
-    "react-native-webview": "11.23.0",
+    "react-native-web": "~0.18.9",
     "react-redux": "^8.0.4",
-    "redux": "^4.2.0",
-    "victory-native": "^36.6.8"
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.3",
     "@react-native-community/eslint-config": "^3.1.0",
-    "@testing-library/react-native": "^11.2.0",
     "@types/react": "~18.0.21",
     "@types/react-native": "~0.70.4",
     "eslint": "^8.24.0",
@@ -58,7 +34,6 @@
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.7.1",
-    "react-test-renderer": "^18.2.0",
     "typescript": "~4.8.4"
   },
   "eslintConfig": {
