--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@rneui/base": "^4.0.0-rc.6",
     "@rneui/themed": "^4.0.0-rc.6",
     "expo": "~46.0.15",
+    "expo-screen-orientation": "^4.3.0",
     "graphql": "^16.6.0",
     "graphql-request": "^5.0.0",
     "react": "18.0.0",
