--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "extends": "expo/tsconfig.base",
+  "target": "es2017",
+  "module": "esnext",
   "compilerOptions": {
     "strict": true
   }
